fix upsell page on mobile screen

--- a/themes/origins/assets/upsell.css
+++ b/themes/origins/assets/upsell.css
@@ -103,6 +103,8 @@ yc-section .upsell .footer video{
     grid-area:auto;
   }
   yc-section .upsell yc-upsell{
+    width:100%;
+    height:auto;
     text-align:center;
     display:grid;
     border:0;
